--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@ I shape the future of AI.
 
              
             <li class="project-item  active" data-filter-item data-category="cybersecurity">
-              <a href="#top" onclick="projects()">
+              <a href="https://vishwavishwanath.github.io/Password_Strength_Analyser-/ " target="_blank" onclick="projects()">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
