--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="wlxh-AI4K2JcfeLI9T9r4feHpXQd1eFFuQPBLbKxWlQ" />
   <title>Vishwa's Portfolio</title>
 
   <!--
