--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto: karnevishu123@gmail.com" class="contact-link">  karnevishu123@gmail</a>
+              <a href="mailto:forvishwaportfolio@gmail.com" class="contact-link">  karnevishu123@gmail.com</a>
             </div>
 
           </li>
