--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
++<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1102,7 +1102,7 @@ I shape the future of AI.
 
              
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#top" onclick="projects()">
+              <a href="https://vishwavishwanath.github.io/Amazon-Clone/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -1121,7 +1121,7 @@ I shape the future of AI.
 
              
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#top" onclick="projects()">
+              <a href="https://vishwavishwanath.github.io/Netflix-Clone/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
