--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--
     - Web icon
   -->
-  <link rel="shortcut icon" href="logo.ico.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 
   <!--
     - custom css link
